# CourseEvalInsight

./: .gitignore  CLAUDE.md  _test_ach.txt  template_content.txt
course_eval/: manage.py  package-lock.json  package.json  pyproject.toml
course_eval/course_eval/: asgi.py  settings.py  urls.py  wsgi.py
course_eval/course_eval/apps/analysis/: apps.py
course_eval/course_eval/apps/excel/: apps.py  cleaner.py  data_handler.py  grades_template.py  models.py  parser.py  serializers.py  urls.py  validation.py  validators.py  views.py  word_parser.py
course_eval/course_eval/apps/excel/migrations/: 0001_initial.py  0002_classgroup_course_semester_coursefilerecord.py  0003_workbooksnapshot.py  0004_coursefilerecord_validation_status.py  0005_coursefilerecord_title_metadata.py
course_eval/course_eval/apps/report/: apps.py  excel_engine.py  models.py  module_docx.py  pdf_engine.py  report_engine.py  serializers.py  tests.py  urls.py  views.py
course_eval/course_eval/apps/report/migrations/: 0001_initial.py  0002_add_module_status_fields.py  0003_add_module_6_status.py
course_eval/course_eval/apps/user/: apps.py  authentication.py  models.py  permissions.py  redis_client.py  serializers.py  urls.py  views.py
course_eval/course_eval/apps/user/migrations/: 0001_initial.py  0002_userprofile_avatar_userprofile_phone.py
course_eval/course_eval/utils/: response.py  zhipu.py
data/raw/: 01-程序设计基础-教学大纲-2025秋.docx  2025_09_10-08.48.41_new.doc  studentselectedcoursebook.xls  学生信息表1.xlsx  成绩分布表.xlsx  (+1 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+45 files in other folders)
