[project]
name = "course-eval"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pymysql>=1.2.0",
    "python-calamine>=0.6.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "reportlab>=4.5.1",
    "xlrd>=2.0.2",
]
